# Code-Audit

CodeAudit/code-audit/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
CodeAudit/code-audit/code_audit/: admin.py  code_audit.py  models.py  pylintrc  utils.py
CodeAudit/code-audit/code_audit/api/: urls.py
CodeAudit/code-audit/code_audit/management/commands/: code_audit.py  code_audit_by_commend.py
CodeAudit/code-audit/code_audit/migrations/: 0001_initial.py  0002_codeauditreport_created_at_and_more.py  0003_codeauditreport_module_name_and_more.py  0004_codeauditreportlog.py  0005_alter_codeauditreport_file_name_and_more.py  0006_codeauditreport_git_user.py
CodeAudit/code-audit/django_code_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
