[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-code-audit"
version = "0.1.5"  # <-- Increment version
description = "A Django app for auditing Python code using pylint"
readme = "README.md"

requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "Ravi K", email = "kravi2439@gmail.com" },
]
keywords = ["django", "pylint", "audit", "code-quality"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "Django>=4.0",
    "pylint>=3.0",
    "pylint-json2html>=0.5",
    "pylint_report>=2.4.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-code-audit"
