[metadata]
name = django-code-audit
version=0.1.5
description = A Django app for auditing Python code using pylint
long_description = file: README.md
long_description_content_type = text/markdown
author = Ravi K
author_email = kravi2439@gmail.com
url = https://github.com/yourusername/django-code-audit
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
install_requires =
    Django>=4.0
    pylint>=3.0
    pylint-json2html>=0.5
    pylint_report>=2.4.2

[options.packages.find]
exclude =
    tests
    docs
